[package]
name = "rust-sample"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "=3.0.0"
csv = "1.3.1"
# eframe = { version = "0.29.1", default-features = true }
rand = "0.9.0"
rand_chacha = "0.9.0"
rand_distr = "0.5.1"
# ndarray = "0.16.0"
# ndarray-linalg = { version = "0.13", features = ["openblas-static"] }
